--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Central Intelligence</title>
+    <style>
+      h1 {
+        color:white;
+        font-size:25px
+        font-family: 'Playfair Display', serif;
+      }
+      .center {
+        text-align:center;
+        }
+        body {
+          background-image:url('img/download (3).jpg');
+          background-repeat: no-repeat;
+          background-size: cover;
+      }
+    </style>
   </head>
-  <body>
-    <p> Central Intelligence </P>
+    <body>
+      <h1 class=center>Central Intelligence</h1>
+      <h1 class=center>Central Intelligence is a Crime/Action movie that was realeased on June 10th, 2016. The plot of the story is that Bullied as a teen for being overweight, Bob Stone (Dwayne Johnson) shows up to his high school reunion looking fit and muscular. While there, he finds Calvin Joyner (Kevin Hart), a fast-talking accountant who misses his glory days as a popular athlete. Stone is now a lethal CIA agent who needs Calvin's number skills to help him save the compromised U.S. spy satellite system. Together, the former classmates encounter shootouts, espionage and double-crosses while trying to prevent worldwide chaos.</p>
   </body>
-</html>
+  </html>
