--- a/index.html
+++ b/index.html
@@ -1,45 +1,26 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Cody Peterson</title>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+    <title>Central Intelligence</title>
+    <style>
+      h1 {
+        color:white;
+        font-size:25px
+        font-family: 'Playfair Display', serif;
+      }
+      .center {
+        text-align:center;
+        }
+        body {
+          background-image:url('img/download (3).jpg');
+          background-repeat: no-repeat;
+          background-size: cover;
+      }
+    </style>
   </head>
-  <body style="background-image:url('img/thumb-1920-77408.jpg')">
-  <body style="image:url('img/tyler_parker_5_guys_nba.0')"> 
-    <h1 style="text-align:center; color:white;font-family: 'Playfair Display', serif;">Cody Peterson</h1>
-    <h3 style="color:white;font-family: 'Playfair Display', serif;"<p>Hello my name is Cody Peterson and I have two brothers, two sisters, a niece, and a nephew. I am 15 years old born 2003 and live in Freehold New Jersey. I was born on December 1st, 2003.</p>
-    <h3 style="font-size:20px;color:white;font-family: 'Playfair Display', serif;"
-  <ol>
-    <li>I like to play sports (basketball and volleyball)</li>
-    <li>Sleep a lot and eat</li>
-    <li>Play videogames</li>
-    <li>Hangout with my friends</li>
-    <li>Watch movies and play boardgames with family</li>
-  </ol>
-  <h3 style="font-size:25px;color:white;font-family: 'Playfair Display', serif;"
-  <b><i> In this class I would like to learn how to create a website (a game) and learn how to write in java script. </i>
-<table border="10" style="border-color:purple"
-<tr>
-<th>Favorite Teams</th>
-<th>Least Favorite Teams</th>
-</tr>
-<tr>
-<td>Oklahoma City Thunder</td>
-<td>New York Knicks</td>
-</tr>
-<tr>
-<td>New York Islanders</td>
-<td>New York Rangers</td>
-</tr>
-<tr>
-<td>New York Yankees</td>
-<td>New York Mets<td>
-</tr>
-<tr>
-<td>Kansas City Chiefs</td>
-<td>New York Jets</td>
-
-
+    <body>
+      <h1 class=center>Central Intelligence</h1>
+      <h1 class=center>Central Intelligence is a Crime/Action movie that was realeased on June 10th, 2016. The plot of the story is that Bullied as a teen for being overweight, Bob Stone (Dwayne Johnson) shows up to his high school reunion looking fit and muscular. While there, he finds Calvin Joyner (Kevin Hart), a fast-talking accountant who misses his glory days as a popular athlete. Stone is now a lethal CIA agent who needs Calvin's number skills to help him save the compromised U.S. spy satellite system. Together, the former classmates encounter shootouts, espionage and double-crosses while trying to prevent worldwide chaos.</p>
   </body>
-</html>
+  </html>
