--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Central Intelligence</title>
     <style>
       h1 {
-        color:white;
+        color:orange;
         font-size:25px
         font-family: 'Playfair Display', serif;
       }
