--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <title>Central Intelligence</title>
     <style>
       h1 {
-        color:orange;
+        color:grey;
         font-size:25px
+        font-family: 'Playfair Display', serif;
+      }
+      h2 {
+        color:white;
+        font-size:20px
         font-family: 'Playfair Display', serif;
       }
       .center {
@@ -21,6 +26,80 @@
   </head>
     <body>
       <h1 class=center>Central Intelligence</h1>
-      <h1 class=center>Central Intelligence is a Crime/Action movie that was realeased on June 10th, 2016. The plot of the story is that Bullied as a teen for being overweight, Bob Stone (Dwayne Johnson) shows up to his high school reunion looking fit and muscular. While there, he finds Calvin Joyner (Kevin Hart), a fast-talking accountant who misses his glory days as a popular athlete. Stone is now a lethal CIA agent who needs Calvin's number skills to help him save the compromised U.S. spy satellite system. Together, the former classmates encounter shootouts, espionage and double-crosses while trying to prevent worldwide chaos.</p>
+      <h2 class=center>Central Intelligence is a Crime/Action movie that was realeased on June 10th, 2016.<br>The plot of the story is that Bullied as a teen for being overweight, Bob Stone (Dwayne Johnson) shows up to his high school reunion looking fit and muscular. <br>While there, he finds Calvin Joyner (Kevin Hart), a fast-talking accountant who misses his glory days as a popular athlete.<br> Stone is now a lethal CIA agent who needs Calvin's number skills to help him save the compromised U.S. spy satellite system.<br> Together, the former classmates encounter shootouts, espionage and double-crosses while trying to prevent worldwide chaos.</p>
+  <table border="10" style="border-color:orange"
+  <tr>
+    <th>Actors</th>
+    <th>Roles in Movie</th>
+    </tr>
+    <tr>
+    <td>Dwayne Johnson</td>
+    <td>Bob Stone</td>
+    </tr>
+    <tr>
+    <td>Kevin Hart</td>
+    <td>Calvin Joyner</td>
+    </tr>
+    <tr>
+    <td>Rawson Marshall Thurber</td>
+    <td>Handsome Pants-Catcher<td>
+    </tr>
+    <tr>
+    <td>Danielle Nicolet</td>
+    <td>Maggie</td>
+    <tr>
+    <td>Aaron Paul</td>
+    <td>Phil</td>
+    </tr>
+    <tr>
+    <td>Amy Ryan</td>
+    <td>Agent Pamela Harris</td>
+    </tr>
+    <tr>
+    <td>Jason Batemanl</td>
+    <td>Trevor</td>
+    </tr>
+    <tr>
+    <td>Ryan Hansen</td>
+    <td>Steve</td>
+    </tr>
+    <table align="center" border="10" style="border-color:orange"
+    <tr>
+      <th>Soundtrack Songs</th>
+      <th>Time of Song</th>
+      </tr>
+      <tr>
+      <td>Central Intelligence</td>
+      <td>2:08</td>
+      </tr>
+      <tr>
+      <td>Robbie</td>
+      <td>0:38</td>
+      </tr>
+      <tr>
+      <td>Golden Jet</td>
+      <td>1:01<td>
+      </tr>
+      <tr>
+      <td>I Don't Like Bullies</td>
+      <td>1:24</td>
+      <tr>
+      <td>Trophy Case</td>
+      <td>0:49</td>
+      </tr>
+      <tr>
+      <td>Forensic Accounting</td>
+      <td>2:25</td>
+      </tr>
+      <tr>
+      <td>Sleepover</td>
+      <td>1:00</td>
+      </tr>
+      <tr>
+      <td>Good Morning, It's the Cia</td>
+      <td>1:37</td>
+      </tr>
+
+
   </body>
   </html>
