--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Central Intelligence</title>
     <style>
       h1 {
-        color:grey;
+        color:yellow;
         font-size:25px
         font-family: 'Playfair Display', serif;
       }
@@ -22,12 +22,14 @@
           background-repeat: no-repeat;
           background-size: cover;
       }
+      .right-table {float:right;}
+
     </style>
   </head>
     <body>
       <h1 class=center>Central Intelligence</h1>
       <h2 class=center>Central Intelligence is a Crime/Action movie that was realeased on June 10th, 2016.<br>The plot of the story is that Bullied as a teen for being overweight, Bob Stone (Dwayne Johnson) shows up to his high school reunion looking fit and muscular. <br>While there, he finds Calvin Joyner (Kevin Hart), a fast-talking accountant who misses his glory days as a popular athlete.<br> Stone is now a lethal CIA agent who needs Calvin's number skills to help him save the compromised U.S. spy satellite system.<br> Together, the former classmates encounter shootouts, espionage and double-crosses while trying to prevent worldwide chaos.</p>
-  <table border="10" style="border-color:orange"
+  <table border="10" style="border-color:blue"
   <tr>
     <th>Actors</th>
     <th>Roles in Movie</th>
@@ -42,7 +44,7 @@
     </tr>
     <tr>
     <td>Rawson Marshall Thurber</td>
-    <td>Handsome Pants-Catcher<td>
+    <td>Handsome Pants-Catcher</td>
     </tr>
     <tr>
     <td>Danielle Nicolet</td>
@@ -63,7 +65,8 @@
     <td>Ryan Hansen</td>
     <td>Steve</td>
     </tr>
-    <table align="center" border="10" style="border-color:orange"
+    <h1>
+    <table class="right-table" border="10" style="border-color:red"
     <tr>
       <th>Soundtrack Songs</th>
       <th>Time of Song</th>
@@ -78,7 +81,7 @@
       </tr>
       <tr>
       <td>Golden Jet</td>
-      <td>1:01<td>
+      <td>1:01</td>
       </tr>
       <tr>
       <td>I Don't Like Bullies</td>
@@ -99,6 +102,11 @@
       <td>Good Morning, It's the Cia</td>
       <td>1:37</td>
       </tr>
+    <img src="img/download.jpg" alt="Central Intelligence">
+    <img src="img/central.jpg" alt="Bar Meeting">
+    <img src="img/central1.jpg" alt="Kevin Hart">
+    <img src="img/central3.jpg" alt="The Rock pushing Kevin">
+
 
 
   </body>
