--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Central Intelligence</title>
     <style>
-      h1 {
-        color:yellow;
+      h1 {background-color:yellow;
         font-size:25px
         font-family: 'Playfair Display', serif;
       }
